Fix title alignment on Post.css

--- a/src/features/posts/Post.css
+++ b/src/features/posts/Post.css
@@ -29,10 +29,12 @@
 
 .post-vote-buttons {
   position: absolute;
-  left: 3%;
-  top: 10px;
+  left: 1vmin;
+  top: 2vmin;
 }
 
 .post-title {
   font-size: calc(12px + 1vmin);
+  width: 100%;
+  text-align: center;
 }
